<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_name"
                        android:textColor="@color/item_text"
                        android:textSize="@dimen/textSize_15" />

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/fd_register_name_hint"
                        android:maxLength="20"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/item_edit_text"
                        android:textColorHint="@color/item_edit_hint_text"
                        android:textSize="@dimen/textSize_15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15sp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_cardType"
                        android:textColor="@color/item_text"
                        android:textSize="@dimen/textSize_15" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/down" />

                    <Spinner
                        android:id="@+id/spinnerCardType"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:paddingLeft="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_cardNo"
                        android:textColor="@color/item_text"
                        android:textSize="@dimen/textSize_15" />

                    <EditText
                        android:id="@+id/txtCardNo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/fd_register_cardNo_hint"
                        android:maxLength="20"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/item_edit_text"
                        android:textColorHint="@color/item_edit_hint_text"
                        android:textSize="@dimen/textSize_15" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_userName"
                        android:textColor="#828282"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/txtUserName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/fd_register_userName_hint"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColorHint="#DDDDDD"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_password"
                        android:textColor="@color/item_text"
                        android:textSize="@dimen/textSize_15" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/fd_register_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/item_edit_text"
                        android:textColorHint="@color/item_edit_hint_text"
                        android:textSize="@dimen/textSize_15" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/item_background"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/fd_register_passwordAgain"
                        android:textColor="@color/item_text"
                        android:textSize="@dimen/textSize_15" />

                    <EditText
                        android:id="@+id/txtPasswordAgain"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/fd_register_passwordAgain_hint"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:paddingLeft="20dp"
                        android:singleLine="true"
                        android:textColor="@color/item_edit_text"
                        android:textColorHint="@color/item_edit_hint_text"
                        android:textSize="@dimen/textSize_15" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/item_background"
                    android:gravity="center" >

                    <TableRow>

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:text="@string/fd_register_captcha"
                            android:textColor="@color/item_text"
                            android:textSize="@dimen/textSize_15" />

                        <EditText
                            android:id="@+id/txtCaptcha"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:hint="@string/fd_register_captcha_hint"
                            android:inputType="number"
                            android:maxLength="6"
                            android:paddingLeft="20dp"
                            android:singleLine="true"
                            android:textColor="@color/item_edit_text"
                            android:textColorHint="@color/item_edit_hint_text"
                            android:textSize="@dimen/textSize_15" />

                        <ImageView
                            android:id="@+id/imageCaptcha"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:src="@drawable/ic_launcher" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:button="@drawable/checkbox" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="我已阅读并同意 "
                            android:textSize="@dimen/textSize_14" />

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="服务协议"
                            android:textColor="@color/logout"
                            android:textSize="@dimen/textSize_14" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_btn_selector"
                        android:padding="10dp"
                        android:text="@string/fd_register_regisiter"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textSize_18" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>